@@ -1,23 +1,23 @@
 package com.coliwogg.gemsandcrystals.world.gen;
 
 import com.coliwogg.gemsandcrystals.GemsandCrystals;
-import com.google.common.collect.ImmutableList;
-import net.minecraft.core.Registry;
-import net.minecraft.data.BuiltinRegistries;
-import net.minecraft.util.valueproviders.UniformInt;
+import net.minecraft.data.worldgen.features.OreFeatures;
 import net.minecraft.world.level.biome.Biome;
 import net.minecraft.world.level.biome.BiomeGenerationSettings;
-import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.levelgen.GenerationStep;
 import net.minecraft.world.level.levelgen.VerticalAnchor;
 import net.minecraft.world.level.levelgen.feature.ConfiguredFeature;
 import net.minecraft.world.level.levelgen.feature.Feature;
-import net.minecraft.world.level.levelgen.feature.configurations.FeatureConfiguration;
 import net.minecraft.world.level.levelgen.feature.configurations.OreConfiguration;
-import net.minecraft.world.level.levelgen.feature.configurations.ReplaceBlockConfiguration;
+import net.minecraft.world.level.levelgen.placement.CountPlacement;
+import net.minecraft.world.level.levelgen.placement.HeightRangePlacement;
+import net.minecraft.world.level.levelgen.placement.InSquarePlacement;
+import net.minecraft.world.level.levelgen.placement.PlacedFeature;
 import net.minecraftforge.event.world.BiomeLoadingEvent;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
 import net.minecraftforge.fml.common.Mod;
+
+import java.util.List;
 
 @Mod.EventBusSubscriber(modid = GemsandCrystals.MOD_ID)
 public class OreGeneration {
@@ -27,21 +27,26 @@ public class OreGeneration {
         for (OreType ore : OreType.values()) {
             if (!(event.getCategory().equals(Biome.BiomeCategory.NETHER) || event.getCategory().equals(Biome.BiomeCategory.THEEND))) {
                 if (ore.getGenerateOreToggle()) {
-                    ImmutableList<OreConfiguration.TargetBlockState> ORE_TARGET_LIST = ImmutableList.of(OreConfiguration.target(OreConfiguration.Predicates.STONE_ORE_REPLACEABLES, ore.getBlock().get().defaultBlockState()), OreConfiguration.target(OreConfiguration.Predicates.DEEPSLATE_ORE_REPLACEABLES, ore.getDeepslateBlock().get().defaultBlockState()));
-                    ConfiguredFeature<?, ?> ORE_TYPE = register(ore.getBlock().get(), Feature.REPLACE_SINGLE_BLOCK.configured(new ReplaceBlockConfiguration(ORE_TARGET_LIST)).rangeUniform(VerticalAnchor.absolute(ore.getMinHeight()), VerticalAnchor.absolute(ore.getMaxHeight())).squared().count(UniformInt.of(ore.getMinVeinSize(), ore.getMaxVeinSize())));
-                    generateOre(event.getGeneration(), ORE_TYPE);
+
+                    List<OreConfiguration.TargetBlockState> ORE_TARGET_LIST = List.of(
+                            OreConfiguration.target(OreFeatures.STONE_ORE_REPLACEABLES, ore.getBlock().get().defaultBlockState()),
+                            OreConfiguration.target(OreFeatures.DEEPSLATE_ORE_REPLACEABLES, ore.getDeepslateBlock().get().defaultBlockState())
+                    );
+
+                    ConfiguredFeature<?, ?> ORE_FEATURE = Feature.ORE.configured(new OreConfiguration(ORE_TARGET_LIST, ore.getMinVeinSize()));
+
+                    PlacedFeature ORE_PLACEMENT = ORE_FEATURE.placed(HeightRangePlacement.triangle(
+                            VerticalAnchor.absolute(ore.getMinHeight()),
+                            VerticalAnchor.absolute(ore.getMaxHeight())), InSquarePlacement.spread(), CountPlacement.of(ore.getChance()));
+
+                    generateOre(event.getGeneration(), ORE_PLACEMENT);
                 }
             }
         }
-
     }
 
-    private static <FC extends FeatureConfiguration> ConfiguredFeature<?, ?> register(Block ore, ConfiguredFeature<FC, ?> pConfiguredFeature) {
-        return Registry.register(BuiltinRegistries.CONFIGURED_FEATURE, ore.getRegistryName(), pConfiguredFeature);
-    }
-
-    public static void generateOre(BiomeGenerationSettings.Builder pBuilder, ConfiguredFeature<?, ?> ore) {
-        pBuilder.addFeature(GenerationStep.Decoration.UNDERGROUND_ORES, ore);
+    private static void generateOre(BiomeGenerationSettings.Builder pBuilder, PlacedFeature ORE_PLACEMENT) {
+        pBuilder.addFeature(GenerationStep.Decoration.UNDERGROUND_ORES, ORE_PLACEMENT);
     }
 
 }
